# klib

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  annotated.html  annotated_dup.js  archive_8h.html  archive_8h.js  archive_8h_source.html  base64_8h.html  base64_8h.js  base64_8h_source.html  classes.html  classklib_1_1ChangeWorkingDir-members.html  classklib_1_1ChangeWorkingDir.html  classklib_1_1ChangeWorkingDir.js  classklib_1_1Column-members.html  classklib_1_1Column.html  classklib_1_1Column.js  classklib_1_1Epub-members.html  classklib_1_1Epub.html  classklib_1_1Epub.js  classklib_1_1Exception-members.html  classklib_1_1Exception.html  classklib_1_1Exception.js  classklib_1_1FastHash-members.html  classklib_1_1FastHash.html  classklib_1_1FastHash.js  classklib_1_1HTTPHeader-members.html  classklib_1_1HTTPHeader.html  classklib_1_1HTTPHeader.js  classklib_1_1HashLib-members.html  classklib_1_1HashLib.html  classklib_1_1HashLib.js  classklib_1_1Headers-members.html  classklib_1_1Headers.html  classklib_1_1Headers.js  classklib_1_1InvalidArgument-members.html  classklib_1_1InvalidArgument.html  (+153 more)
.github/workflows/: build.yml  clang_tidy.yml  codeql.yml  coverage.yml  doxygen.yml  release.yml  sanitizer.yml  valgrind.yml
bench/: CMakeLists.txt  README.md  archive.cpp  archive_bench.cpp  base64.cpp  bench-result.txt  bench.cpp  crypto.cpp  font.cpp  hash.cpp  hashmap.cpp  http.cpp  http_bench.cpp  image.cpp  json.cpp  qr_code.cpp  regex.cpp  result.md  set.cpp  sort.cpp  unicode.cpp  util_bench.cpp
cacert/: README.md
cmake/: CMakeUninstall.cmake.in  Check.cmake  CompilerOptions.cmake  Coverage.cmake  Doxygen.cmake  Format.cmake  Install.cmake  Options.cmake  Valgrind.cmake  Version.cmake  klibConfig.cmake.in
data/: zlib-ng-2.0.6.rar  zlib-v1.2.11.tar.zst
doc/: README.md
epub/: style.css
example/: CMakeLists.txt  main.cpp
include/klib/: archive.h  base64.h  config.h  crypto.h  epub.h  error.h  exception.h  font.h  hash.h  hash_lib.h  html.h  http.h  http_parse.h  icu.h  image.h  log.h  markdown.h  mime.h  qr_code.h  sql.h  unicode.h  url.h  url_parse.h  util.h  version.h
include/klib/detail/: error.h  fmt_with_loc.h  format_with_location.h  http_parse_inc.h  openssl_error.h  openssl_util.h  unicode.h  unicode_util.h
script/: build.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_a.js  defines_0.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  files_0.js  files_1.js  (+35 more)
src/: archive.cpp  base64.cpp  blob.s  cacert.s  crypto.cpp  epub.cpp  font.cpp  hash.cpp  hash_lib.cpp  html.cpp  http.cpp  http_parse.cpp  icu.cpp  image.cpp  markdown.cpp  mime.cpp  qr_code.cpp  sql.cpp  unicode.cpp  url.cpp  url_parse.cpp  util.cpp
src/detail/: openssl_util.cpp
style/: style.css
test/: CMakeLists.txt
test/cmake_add_subdirectory/: CMakeLists.txt
test/cmake_add_subdirectory/project/: CMakeLists.txt  main.cpp
test/cmake_import/: CMakeLists.txt
test/cmake_import/project/: CMakeLists.txt
test/cmake_import_minver/: CMakeLists.txt
test/cmake_import_minver/project/: CMakeLists.txt
test/extra_test/: CMakeLists.txt
test/extra_test/cmake_add_subdirectory/: CMakeLists.txt  main.cpp
test/extra_test/cmake_import/: CMakeLists.txt  main.cpp
test/extra_test/cmake_import_minver/: CMakeLists.txt  main.cpp
test/unit_test/: CMakeLists.txt  archive.cpp  archive_test.cpp  base64.cpp  crypto.cpp  crypto_test.cpp  epub_test.cpp  exception_test.cpp  font.cpp  hash.cpp  hash_lib_test.cpp  hash_test.cpp  html.cpp  html_test.cpp  http.cpp  http_parse.cpp  http_test.cpp  image.cpp  markdown.cpp  markdown_test.cpp  mime.cpp  qr_code.cpp  sql.cpp  sql_test.cpp  unicode.cpp  unicode_test.cpp  url.cpp  url_parse.cpp  util.cpp  util_test.cpp  version_test.cpp
tool/: CMakeLists.txt  main.cpp
